DigicielFull/force-app/main/default/objects/amc__Dependency__c/amc__Dependency__c.object-meta.xml
<CustomObject>
    <label>Dependency</label>
    <nameField>
        <displayFormat>DEP:{00000000}</displayFormat>
        <label>Dependency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>