DigicielFull/force-app/main/default/objects/amc__Dependency__c/fields/amc__Child_Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Child_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Action that is the Child in the dependency relationship</inlineHelpText>
    <label>Child Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Dependencies (Child Action)</relationshipLabel>
    <relationshipName>Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>