DigicielFull/force-app/main/default/objects/amc__Dependency__c/fields/amc__Child_Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>amc__Child_Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Checklist Item that is the Child in the dependency relationship</inlineHelpText>
    <label>Child Checklist Item</label>
    <referenceTo>amc__Checklist_Item__c</referenceTo>
    <relationshipLabel>Dependencies (Child Checklist Item)</relationshipLabel>
    <relationshipName>Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>