DigicielFull/force-app/main/default/objects/amc__Dependency__c/fields/amc__Parent_Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Parent_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Milestone that is the Parent in the dependency relationship</inlineHelpText>
    <label>Parent Milestone</label>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>