DigicielFull/force-app/main/default/objects/amc__Dependency__c/fields/amc__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Relationship_Type__c</fullName>
    <inlineHelpText>Identifies the type of relationship between the Parent and Child</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finish to Start</fullName>
            </value>
            <value>
                <fullName>Start to Start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>